adds styles for header

--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
   </head>
   <body>
-    <header>
+    <header class="header border">
+      <div class="container">
       <a href="" class="link header-logo"> <span lang="en" class="logo">Web</span>Studio</a>
       <nav>
-        <ul class="list">
+        <ul class="list list-nav">
           <li>
             <a href="index.html" class="link header-link-current current">Студия</a>
           </li>
@@ -26,7 +27,7 @@
           <li><a href="" class="link header-link-current">Контакты</a></li>
         </ul>
       </nav>
-      <ul class="list">
+      <ul class="list contacts-nav">
         <li>
           <a href="mailto:info@devstudio.com" class="link header-communication"
             >info@devstudio.com</a
@@ -36,6 +37,7 @@
           <a href="tel:++380961111111" class="link header-communication">+38 096 111 11 11</a>
         </li>
       </ul>
+      </div>
     </header>
     <main>
       <!-- Main section -->
