adds styles to footer

--- a/portfolio.html
+++ b/portfolio.html
@@ -15,16 +15,17 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
   </head>
   <body>
-    <header>
+    <header class="header border">
+     <div class="container">
       <a href="" class="link header-logo"> <span lang="en" class="logo">Web</span>Studio</a>
       <nav>
-        <ul class="list">
+        <ul class="list list-nav">
           <li><a href="index.html" class="link header-link-current">Студия</a></li>
           <li><a href="portfolio.html" class="link header-link-current current">Портфолио</a></li>
           <li><a href="" class="link header-link-current">Контакты</a></li>
         </ul>
       </nav>
-      <ul class="list">
+      <ul class="list contacts-nav">
         <li>
           <a href="mailto:info@devstudio.com" class="link header-communication"
             >info@devstudio.com</a
@@ -34,6 +35,7 @@
           <a href="tel:++380961111111" class="link header-communication">+38 096 111 11 11</a>
         </li>
       </ul>
+      </div> 
     </header>
     <main>
       <section>
@@ -171,12 +173,16 @@
       </section>
     </main>
     <footer class="footer">
+      <div class="container">
       <a href="" class="link footer-logo"> <span class="logo">Web</span>Studio</a>
-      <address>
-        <p class="address-txt">г. Киев, пр-т Леси Украинки, 26</p>
-        <a href="mailto:info@example.com" class="link footer-communication">info@example.com</a>
-        <a href="tel:+380991111111" class="link footer-communication">+38 099 111 11 11</a>
+      <address class="footer-contacts">
+        <ul class="list">
+          <li class="footer-item"><p class="address-txt">г. Киев, пр-т Леси Украинки, 26</p></li>
+          <li class="footer-item"><a href="mailto:info@example.com" class="link footer-communication">info@example.com</a></li>
+          <li class="footer-item"><a href="tel:+380991111111" class="link footer-communication">+38 099 111 11 11</a></li>
+        </ul>
       </address>
+      </div>
     </footer>
   </body>
 </html>
