--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
       <nav>
         <ul class="list list-nav">
           <li>
-            <a href="index.html" class="link header-link-current current">Студия</a>
-          </li>
+            <a href="index.html" class="link header-link-current current">Студия</a></li>
           <li><a href="portfolio.html" class="link header-link-current">Портфолио</a></li>
           <li><a href="" class="link header-link-current">Контакты</a></li>
         </ul>
@@ -163,12 +162,16 @@
       </section>
     </main>
     <footer class="footer">
+      <div class="container">
       <a href="" class="link footer-logo"> <span class="logo">Web</span>Studio</a>
-      <address>
-        <p class="address-txt">г. Киев, пр-т Леси Украинки, 26</p>
-        <a href="mailto:info@example.com" class="link footer-communication">info@example.com</a>
-        <a href="tel:+380991111111" class="link footer-communication">+38 099 111 11 11</a>
+      <address class="footer-contacts">
+        <ul class="list">
+          <li class="footer-item"><p class="address-txt">г. Киев, пр-т Леси Украинки, 26</p></li>
+          <li class="footer-item"><a href="mailto:info@example.com" class="link footer-communication">info@example.com</a></li>
+          <li class="footer-item"><a href="tel:+380991111111" class="link footer-communication">+38 099 111 11 11</a></li>
+        </ul>
       </address>
+      </div>
     </footer>
   </body>
 </html>
