--- a/index.html
+++ b/index.html
@@ -40,42 +40,44 @@
     </header>
     <main>
       <!-- Main section -->
-      <section class="title">
-        <h1 class="uppertitle">
-          Эффективные решения <br />
-          для вашего бизнеса
-        </h1>
+      <section class="main section">
+        <div class="main container">
+        <h1 class="main-title">
+          Эффективные решения для вашего бизнеса</h1>
         <button class="btn" type="button">Заказать услугу</button>
+        </div>
       </section>
-      <!--Особенности  -->
-      <section class="section-1">
-        <h2 hidden>Особенности</h2>
-        <ul class="list">
-          <li>
+      <!--Features-->
+      <section class="features-section">
+        <div class="features conrainer">
+        <h2 class="visually-hidden">Особенности</h2>
+        <ul class="list features">
+          <li class="features item">
             <h3 class="caption">Внимание к деталям</h3>
             <p class="caption-txt">
               Идейные соображения, а также начало повседневной работы по формированию позиции.
             </p>
           </li>
-          <li>
+          <li class="features item">
             <h3 class="caption">Пунктуальность</h3>
             <p class="caption-txt">
               Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
             </p>
           </li>
-          <li>
+          <li class="features item">
             <h3 class="caption">Планирование</h3>
             <p class="caption-txt">
               Равным образом консультация с широким активом в значительной степени обуславливает.
             </p>
           </li>
-          <li>
+          <li class="features item">
             <h3 class="caption">Современные технологии</h3>
             <p class="caption-txt">
               Значимость этих проблем настолько очевидна, что реализация плановых заданий.
             </p>
           </li>
         </ul>
+        </div>
       </section>
       <!--Чем мы занимаемся-->
       <section>
