--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
       </section>
       <!--Features-->
-      <section class="features-section">
+      <section class="features section">
         <div class="features conrainer">
         <h2 class="visually-hidden">Особенности</h2>
         <ul class="list features">
