--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </section>
       <!--Features-->
       <section class="features section">
-        <div class="features conrainer">
+        <div class="features container">
         <h2 class="visually-hidden">Особенности</h2>
         <ul class="list features">
           <li class="features item">
@@ -79,31 +79,29 @@
         </ul>
         </div>
       </section>
-      <!--Чем мы занимаемся-->
-      <section>
+      <!--What we do-->
+      <section class="skills section">
+        <div class="container">
         <h2 class="heading">Чем мы занимаемся</h2>
-        <ul class="list">
-          <li>
+        <ul class="list skills">
+          <li class="skills item">
             <img
-              class="list-pic"
               src="./images/what-we-do/box-1.jpg"
               alt="пишет код"
               width="370"
               height="294"
             />
           </li>
-          <li>
+          <li class="skills item">
             <img
-              class="list-pic"
               src="./images/what-we-do/box-2.jpg"
               alt="телефон авторизируется с компютером"
               width="370"
               height="294"
             />
           </li>
-          <li>
+          <li class="skills item">
             <img
-              class="list-pic"
               src="./images/what-we-do/box-3.jpg"
               alt="спектр цветов на ноутбуке"
               width="370"
@@ -111,6 +109,7 @@
             />
           </li>
         </ul>
+        </div>
       </section>
       <!--Наша команда-->
       <section class="section-3">
