--- a/index.html
+++ b/index.html
@@ -111,55 +111,61 @@
         </ul>
         </div>
       </section>
-      <!--Наша команда-->
-      <section class="section-3">
+      <!--Our team-->
+      <section class="team section">
+        <div class="container">
         <h2 class="heading">Наша команда</h2>
-        <ul class="list">
-          <li>
+        <ul class="list team">
+          <li class="team-card item">
             <img
-              class="list-images"
               src="./images/our-team/img(1).jpg"
               alt="мужчина в коричневой рубашке"
               width="270"
               height="260"
             />
+            <div class="team-card-desc">
             <h3 class="list-title">Игорь Демьяненко</h3>
             <p class="list-txt" lang="en">Product Designer</p>
+            </div>
           </li>
-          <li>
+          <li class="team-card item">
             <img
-              class="list-images"
               src="./images/our-team/img(2).jpg"
               alt="женщина в очках"
               width="270"
               height="260"
             />
+            <div class="team-card-desc">
             <h3 class="list-title">Ольга Репина</h3>
             <p class="list-txt" lang="en">Frontend Developer</p>
+            </div>
           </li>
-          <li>
+          <li class="team-card item">
             <img
-              class="list-images"
               src="./images/our-team/img(3).jpg"
               alt="мужчина в белой рубашке"
               width="270"
               height="260"
             />
+            <div class="team-card-desc">
             <h3 class="list-title">Николай Тарасов</h3>
             <p class="list-txt" lang="en">Marketing</p>
+            </div>
           </li>
-          <li>
+          <li class="team-card item">
             <img
-              class="list-images"
               src="./images/our-team/img(4).jpg"
               alt="мужчина в черной рубашке"
               width="270"
               height="260"
             />
+            <div class="team-card-desc">
             <h3 class="list-title">Михаил Ермаков</h3>
             <p class="list-txt" lang="en">UI Designer</p>
+            </div>
           </li>
         </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
