--- a/portfolio.html
+++ b/portfolio.html
@@ -38,21 +38,20 @@
       </div> 
     </header>
     <main>
-      <section>
+      <section class="section">
+        <div class="container">
         <!--Filters-->
-        <ul class="list">
-          <li>
-            <button class="list-btn button-current list-btn-current" type="button">Все</button>
-          </li>
+        <ul class="list filters">
+          <li><button class="list-btn button-current list-btn-current" type="button">Все</button></li>
           <li><button class="list-btn list-btn-current" type="button">Веб-сайты</button></li>
           <li><button class="list-btn list-btn-current" type="button">Приложения</button></li>
           <li><button class="list-btn list-btn-current" type="button">Дизайн</button></li>
           <li><button class="list-btn list-btn-current" type="button">Маркетинг</button></li>
         </ul>
         <!--Projects-->
-        <h1 hidden>Projects</h1>
-        <ul class="list">
-          <li>
+        <h1 class="visually-hidden">Projects</h1>
+        <ul class="list projects">
+          <li class="projects-card item">
             <a href="" class="link">
               <img
                 class="list-img"
@@ -61,11 +60,13 @@
                 width="370px"
                 height="294"
               />
+              <div class="projects-card-desc">
               <h2 class="list-heading">Технокряк</h2>
               <p class="list-text">Веб-сайт</p>
+              </div>
             </a>
           </li>
-          <li>
+          <li class="projects-card item">
             <a href="" class="link">
               <img
                 class="list-img"
@@ -74,11 +75,13 @@
                 width="370px"
                 height="294"
               />
+              <div class="projects-card-desc">
               <h2 class="list-heading">Постер New Orlean vs Golden Star</h2>
               <p class="list-text">Дизайн</p>
+              </div>
             </a>
           </li>
-          <li>
+          <li class="projects-card item">
             <a href="" class="link">
               <img
                 class="list-img"
@@ -87,11 +90,13 @@
                 width="370px"
                 height="294"
               />
+              <div class="projects-card-desc">
               <h2 class="list-heading">Ресторан Seafood</h2>
               <p class="list-text">Ресторан Seafood</p>
+              </div>
             </a>
           </li>
-          <li>
+          <li class="projects-card item">
             <a href="" class="link">
               <img
                 class="list-img"
@@ -100,11 +105,13 @@
                 width="370px"
                 height="294"
               />
+              <div class="projects-card-desc">
               <h2 class="list-heading">Проект Prime</h2>
               <p class="list-text">Маркетинг</p>
+              </div>
             </a>
           </li>
-          <li>
+          <li class="projects-card item">
             <a href="" class="link">
               <img
                 class="list-img"
@@ -113,11 +120,13 @@
                 width="370px"
                 height="294"
               />
+              <div class="projects-card-desc">
               <h2 class="list-heading">Проект Boxes</h2>
               <p class="list-text">Приложение</p>
+              </div>
             </a>
           </li>
-          <li>
+          <li class="projects-card item">
             <a href="" class="link">
               <img
                 class="list-img"
@@ -126,11 +135,13 @@
                 width="370px"
                 height="294"
               />
+              <div class="projects-card-desc">
               <h2 class="list-heading">Inspiration has no Borders</h2>
               <p class="list-text">Веб-сайт</p>
+              </div>
             </a>
           </li>
-          <li>
+          <li class="projects-card item">
             <a href="" class="link">
               <img
                 class="list-img"
@@ -139,11 +150,13 @@
                 width="370px"
                 height="294"
               />
+              <div class="projects-card-desc">
               <h2 class="list-heading">Издание Limited Edition</h2>
               <p class="list-text">Дизайн</p>
+              </div>
             </a>
           </li>
-          <li>
+          <li class="projects-card item">
             <a href="" class="link">
               <img
                 class="list-img"
@@ -152,11 +165,13 @@
                 width="370px"
                 height="294"
               />
+              <div class="projects-card-desc">
               <h2 class="list-heading">Проект LAB</h2>
               <p class="list-text">Маркетинг</p>
+              </div>
             </a>
           </li>
-          <li>
+          <li class="projects-card item">
             <a href="" class="link">
               <img
                 class="list-img"
@@ -165,11 +180,14 @@
                 width="370px"
                 height="294"
               />
+              <div class="projects-card-desc">
               <h2 class="list-heading">Growing Business</h2>
               <p class="list-text">Приложение</p>
+              </div>
             </a>
           </li>
         </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
